# enterprise-search

./: .env.example  .gitignore  CENTRALIZED_USER_MANAGEMENT.md  CLEANUP_SUMMARY.md  CODE_REFACTORING_SUMMARY.md  CSV_DATA_MANAGEMENT.md  DOCUMENT_TRACKING.md  EMAIL_LOGIN_SETUP.md  ENVIRONMENT_UPGRADE.md  HIERARCHY_DEBUG_NOTES.md  README.md  activate.sh  chat.postman_collection.json  craco.config.js  delete_index.py  docker-compose.yml  employees_export.csv  environment.yml  export_employees.py  import_employees.py  manage.sh  new_people_data_generated.json  package-lock.json  package.json  pyproject.toml  requirements.txt  restart-dev.sh  sample_employees.csv  test_connection.py  test_document_tracking.html  test_indexing.py  test_search.js  tsconfig.json
api/: config.py  insert_7_level_employees.py  main.py  requirements-dev.txt  requirements.txt  run.py
api/data/: chat_sessions.json
data/: chat_sessions.json  employees.json  people.json
mock_server/: mockServer.ts  package-lock.json  package.json  tsconfig.json
public/: index.html  manifest.json
python/: __init__.py  add_employee_data.py  add_focused_test_docs.py  elasticsearch_mapping.json  gen_test_data.py  generate_employees.py  generate_hierarchy.py  generate_new_people_data.py  import_new_people_data.py  load_people_data.py  people.json  populate_hierarchy_index.py  populate_hierarchy_nodes.py  requirements.txt  search_application.json  setup_clean_employees.py  setup_employees.py  setup_hierarchy_index.py  test_employee_search.py
src/: App.tsx  TestApp.tsx  index.css  index.tsx  theme.css
(+140 files in other folders)
